Programming languages and paradigms/Interpreter/examples/bad/type_mismatch.ho
func main() {
    var x int = "abc"; // error:2:17: cannot use type string as type int
}